# ClipScribe

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
app/: config.py  main.py  schemas.py
app/services/: extractor.py  transcriber.py
